kubernetes/vader/applications/user-apps/organizr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organizr-deployment
  namespace: user-apps

spec:
  selector:
    matchLabels:
      app: organizr
  replicas: 1
  template:
    metadata:
      labels: 
        app: organizr
    spec:
      containers:
        - name: organizr
          image: organizr/organizr:latest
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: config
          nfs:
            server: bandit-nfs.local
            path: /srv/nfs/vader
