kubernetes/vader/applications/user-apps/organizr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organizr-service
  namespace: user-apps

spec:
  type: ClusterIP
  selector:
    app: organizr
  ports:
    - name: http
      port: 80
      targetPort: http
