kubernetes/vader/applications/user-apps/organizr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organizr-ingressroute
  namespace: user-apps

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`organizr.feldman.in`)
      kind: Rule
      services:
        - name: organizr-service
          port: 80
  tls:
    secretName: organizr-feldman-in-tls
